<resources>
    <string name="app_name">FT Helper</string>

    <!-- Strings related to Settings -->
    <!--<string name="pref_id_enable_proxy">enable_switch</string>
    <string name="pref_id_enable_overlay">enable_overlay</string>
    <string name="pref_id_submit_inventory">submitInventoryToFfrkToolkit</string>
    <string name="pref_id_google_login">googleLogin</string>-->

    <!-- Example Data & Proxy settings -->
    <string name="pref_header_proxy_and_data">Proxy &amp; Data Controls</string>
    <string name="pref_overlay_settings">Overlay &amp; Notification Settings</string>

    <string name="pref_title_enable_proxy">Enable Proxy</string>
    <string name="pref_description_enable_proxy">Enables the HTTP proxy to capture
        data.
    </string>
    <string name="pref_title_enable_overlay">Enable Overlay</string>
    <string name="pref_description_enable_overlay">Enables the drop tracking overlay
    </string>
    <string name="pref_title_enable_debug">Enable Debug Mode</string>
    <string name="manually_send_logs">Manually push debug logs</string>
    <string name="proxy_port_label">Proxy Port</string>
    <string name="default_proxy_port">8081</string>
    <string name="default_port_range_message">Choose a port between 1024 and 49151</string>

    <string name="reset_overlay_btn_text">Reset Overlay Position</string>

    <string name="open_wifi_settings_btn_text">Open Wifi Settings</string>
    <string name="install_cert_text">Install HTTPS Certificate</string>

    <string name="pref_title_send_inventory_data">Send Inventory</string>
    <string name="pref_description_send_inventory_data">Tap to send your captured inventory data
        to FFRK Toolkit (must be logged in).
    </string>

    <string name="pref_title_google_login">Login</string>
    <string name="pref_title_google_logout">Logout</string>
    <string name="pref_description_google_login">Log into FFRK Toolkit using your Google Account
    </string>
    <string name="pref_description_google_logout">Logged in as:\u0020</string>
    <string name="logged_out">Logged out</string>

    <!-- App strings -->
    <string name="file_inventory_global_json">inventory_global.json</string>
    <string name="file_inventory_jp_json">inventory_jp.json</string>
    <string name="file_equipment_global_json">equipment_global.json</string>
    <string name="file_equipment_jp_json">equipment_jp.json</string>
    <string name="file_vault_global_json">vault_global.json</string>
    <string name="file_vault_jp_json">vault_jp.json</string>
    <string name="file_materials_global_json">materials_global.json</string>
    <string name="file_materials_jp_json">materials_jp.json</string>
    <string name="external_data_map_json">ffrktoolkithelper_data_map.json</string>

    <string name="log_tag">FFRKToolkitHelper</string>

    <string name="exception_no_inventory_data_toast">No inventory data captured, visit the Party screen before trying again.</string>
    <string name="exception_invalid_inventory_data_toast">Invalid inventory data, visit the Party screen before trying again.</string>
    <string name="exception_saving_inventory">Error while saving inventory.</string>
    <string name="exception_loading_inventory">Error while loading existing inventory.</string>

    <string name="toast_not_signed_in">Please login before trying to submit data.</string>
    <string name="toast_inventory_saved_successfully">Inventory saved successfully!</string>

    <string name="notification_proxy_enabled">Proxy enabled</string>
    <string name="notification_stop_proxy">Stop proxy</string>
    <string name="proxy_bypass_copied">Copied proxy bypass list to clipboard</string>

    <string name="oauth_token">193355482636-v8vqij11qe5qvpjc1su5u6jq62l4p0i4.apps.googleusercontent.com</string>
    <string name="user_functions_url">https://www.ffrktoolkit.com/user_functions.php</string>
    <string name="data_maps_url">https://www.ffrktoolkit.com/data/ffrktoolkithelper_data_map.json</string>

    <string name="intent_stop_proxy">com.ffrktoolkit.intent.action.stop_proxy</string>
    <string name="intent_start_proxy">com.ffrktoolkit.intent.action.start_proxy</string>
    <string name="intent_change_proxy_port">com.ffrktoolkit.intent.action.change_proxy_port</string>
    <string name="intent_update_stamina">com.ffrktoolkit.ffrktoolkithelper.action.update_stamina</string>
    <string name="intent_stop_stamina_tracker">com.ffrktoolkit.ffrktoolkithelper.action.stop_stamina_tracker</string>

    <string name="button_cancel">Cancel</string>
    <string name="upload_progress_dialog_title">Uploading Inventory</string>
    <string name="upload_progress_dialog_loading_message">Loading existing inventory</string>
    <string name="upload_progress_dialog_loaded_message">Inventory loaded, updating with latest data.</string>
    <string name="upload_progress_dialog_saving_message">Sending inventory to FFRK Toolkit</string>

    <string name="overlay_close">Close</string>
    <string name="overlay_waiting_for_data">No battle data available</string>
    <string name="overlay_no_drops">No drop data available for this battle</string>

    <string name="proxy_bypass_list">127.0.0.1,lcd-prod.appspot.com,live.chartboost.com,android.clients.google.com,googleapis.com,android.googleapis.com,ssl.sp.mbga-platform.jp,ssl.sp.mbga.jp,app.adjust.io,play.googleapis.com</string>

    <string name="waiting_for_data">Waiting for data...</string>

    <string name="pref_title_stamina_tracker">Enable Stamina Tracker</string>
    <string name="stamina_notification_current">Stamina: %1$s / %2$s</string>
    <string name="stamina_notification_time_left_24">Restored at %1$s</string>
    <string name="stamina_notification_time_left">Restored in %1$s at %2$s</string>
    <string name="stamina_restored">Stamina fully restored!</string>

    <string name="error_proxy_already_started">Proxy already running or another application is using port\u0020</string>

    <string name="cert_manual_install_11">You need to manually install the certificate on Android 11 and higher</string>
    <string name="cert_extracted">Certificate has been extracted</string>
    <string name="error">Error</string>
</resources>

