<FrameLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <Switch android:id="@id/enable_proxy_switch" android:text="@string/pref_title_enable_proxy" android:layout_width="fill_parent" android:layout_height="wrap_content" />
            <Switch android:id="@id/enable_overlay_switch" android:text="@string/pref_title_enable_overlay" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/activity_vertical_margin" />
            <!--<Switch android:id="@id/enable_debug_switch" android:text="@string/pref_title_enable_debug" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/activity_vertical_margin" />-->
            <LinearLayout android:focusable="true" android:layout_marginTop="@dimen/activity_vertical_margin" android:layout_width="match_parent" android:layout_height="wrap_content">
                <TextView android:textColor="@color/black" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/proxy_port_label" />
                <EditText android:id="@id/proxy_port" android:focusedByDefault="false" android:inputType="number"
                    android:text="@string/default_proxy_port" android:textAlignment="textEnd" android:gravity="end"
                    android:singleLine="true"
                    android:layout_width="match_parent" android:layout_height="wrap_content" />
            </LinearLayout>
            <!--<Button android:id="@id/reset_overlay_btn" android:text="@string/reset_overlay_btn_text" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/activity_vertical_margin" />-->
            <Button android:id="@id/wifi_settings" android:text="@string/open_wifi_settings_btn_text" android:enabled="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/activity_vertical_margin" />


            <Button android:id="@id/submit_inventory_btn" android:text="@string/pref_title_send_inventory_data" android:enabled="false" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/activity_vertical_margin_large" />
            <Spinner android:id="@id/region_upload_spinner" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/activity_vertical_margin" />
            <LinearLayout android:orientation="vertical" android:layout_marginTop="@dimen/activity_vertical_margin" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:id="@id/login_status" android:textColor="@color/black" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/logged_out" />
                <Button android:id="@id/google_login_btn" android:text="@string/pref_title_google_login" android:layout_width="fill_parent" android:layout_height="wrap_content" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</FrameLayout>